--- a/readme.org
+++ b/readme.org
@@ -13,3 +13,22 @@ Prototype optimization routine using spotpy package
 ** TODO Regenerate the default_sim folder at the beginning of the optimization
    - Has to be called from driver.py
    - Maybe make a function out of prepare_domain so we can call it either via cmdline or inside python
+** TODO prepost: check if the specified data period has enough grdc data for kge calculation (abort or warn)
+
+* basins filtering for optimization
+  these basins have very little data in grdc (between 1985 ~ 2014). Dot not use them for optimization.
+  basin name     valid data points (days)
+  2467           1461
+  3268           1461
+  3556           1003
+  2158           1095
+  5198           1095
+  4351           1461
+  5816           1435
+  6527           1095
+  1984           192
+  4675           1461
+  6666           1461
+  5821           1410
+  6702           0
+  6134           1364
