deleting cached files and some minor changes

--- a/readme.org
+++ b/readme.org
@@ -15,6 +15,10 @@ Prototype optimization routine using spotpy package
    - Maybe make a function out of prepare_domain so we can call it either via cmdline or inside python
 ** TODO prepost: check if the specified data period has enough grdc data for kge calculation (abort or warn)
 
+** TODO Add submission script
+   - both juwels and eve work with slurm
+   - for ecmwf use qsub
+** TODO Add all the paths to htcal_path (for eve, juwels and ecmwf). Separate files for each cluster.
 * basins filtering for optimization
   these basins have very little data in grdc (between 1985 ~ 2014). Dot not use them for optimization.
   basin name     valid data points (days)
