added comments for sp. parameters

--- a/params.org
+++ b/params.org
@@ -25,13 +25,13 @@
 |          | zach_vgn_8    |         -5.00 |         5.00 |          0.00 | True          |                    |                                                                                                                                                                                 |
 |          | zach_vgn_9    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
 |          | zach_vgn_10   |         -5.00 |         5.00 |          0.00 | True          |                    |                                                                                                                                                                                 |
-| 0.768556 | nfac          |  1.101200e+00 | 1.377400e+00 |  1.101200e+00 | False         |                    |                                                                                                                                                                                 |
-| 0.717580 | wsatm         |  4.030000e-01 | 7.660000e-01 |  4.030000e-01 | False         |                    |                                                                                                                                                                                 |
-| 0.495445 | wcons         |  2.630000e-07 | 6.940000e-06 |  2.630000e-07 | False         |                    |                                                                                                                                                                                 |
+| 0.768556 | nfac          |  1.101200e+00 | 1.377400e+00 |  1.101200e+00 | False         |                    | n in vG                                                                                                                                                                         |
+| 0.717580 | wsatm         |  4.030000e-01 | 7.660000e-01 |  4.030000e-01 | False         |                    | \Theta_s in vG                                                                                                                                                                  |
+| 0.495445 | wcons         |  2.630000e-07 | 6.940000e-06 |  2.630000e-07 | False         |                    | hydraulic conductivity at saturation                                                                                                                                            |
 | 0.334823 | rsnrttemp     |  2.456640e+02 | 3.002560e+02 |  2.729600e+02 | True          |                    | Used for setting up the look up table                                                                                                                                           |
-| 0.216603 | vgalpha       |  8.300000e-01 | 3.830000e+00 |  8.300000e-01 | False         |                    |                                                                                                                                                                                 |
+| 0.216603 | vgalpha       |  8.300000e-01 | 3.830000e+00 |  8.300000e-01 | False         |                    | \alpha in vG                                                                                                                                                                    |
 | 0.213012 | rtf1          |  2.721000e+02 | 2.760000e+02 |  2.741600e+02 | True          |                    | UPPER TEMPERATURE FOR SOIL WATER FREEZING                                                                                                                                       |
-| 0.207276 | lambdam       | -2.342100e+00 | 2.500000e+00 | -2.342100e+00 | False         |                    |                                                                                                                                                                                 |
+| 0.207276 | lambdam       | -2.342100e+00 | 2.500000e+00 | -2.342100e+00 | False         |                    | exponent in the calculating of MINIMUM/MAXIMUM DIFFUSIVITY of soil                                                                                                              |
 | 0.171599 | rtf2          |  2.680000e+02 | 2.720000e+02 |  2.701600e+02 | True          |                    | LOWER TEMPERATURE FOR SOIL WATER FREEZING                                                                                                                                       |
 | 0.154465 | ralfmaxsn     |  7.650000e-01 | 9.350000e-01 |  8.500000e-01 | True          |                    | MAXIMUM SNOW ALBEDO                                                                                                                                                             |
 | 0.114790 | ralamsn       |  1.692000e+00 | 2.068000e+00 |  1.880000e+00 | True          |                    | EXPONENT IN SNOW HEAT CONDUCTIVITY                                                                                                                                              |
@@ -42,13 +42,13 @@
 | 0.044422 | rsndtoverc    |  1.620000e-02 | 1.980000e-02 |  1.800000e-02 | True          |                    | snow param: COMPACTATION DUE TO overburden (power law)                                                                                                                          |
 | 0.041144 | rhominsna     |  9.810000e+01 | 1.199000e+02 |  1.090000e+02 | True          |                    | snow param: !New snow density: ZRHOFRESH = RHOMINSNA + RHOMINSNB*(PTSRF(JL)-RTT) + RHOMINSNC*(PUSRF(JL)**2+PVSRF(JL)**2)**0.25_JPRB                                             |
 | 0.036834 | rsndtoverb    |  7.290000e-02 | 8.910000e-02 |  8.100000e-02 | True          |                    | snow param: COMPACTATION DUE TO overburden (power law)                                                                                                                          |
-| 0.031102 | rwrst         |  1.000000e-02 | 2.500000e-02 |  1.000000e-02 | False         |                    |                                                                                                                                                                                 |
+| 0.031102 | rwrst         |  1.000000e-02 | 2.500000e-02 |  1.000000e-02 | False         |                    | \Theta_r in vG                                                                                                                                                                  |
 | 0.030752 | rsnsnow       |  6.300000e+00 | 7.700000e+00 |  7.000000e+00 | True          |                    | PLAMSK(KIDIA:KFDIA,JT) = RSNSNOW where plamsk is tiled skin layer conductivity                                                                                                  |
 | 0.024504 | rsndtovera    |  3.330000e+07 | 4.070000e+07 |  3.700000e+07 | True          |                    | snow param: COMPACTATION DUE TO overburden (power law)  ZRSNDTOVER=0.5*PSSNM1M(JL)*RG/(RSNDTOVERA*EXP(RSNDTOVERB*(ZT0-PTSN(JL))+RSNDTOVERC*PRSNM1M(JL)))                        |
 | 0.023274 | rhominsnb     |  5.400000e+00 | 6.600000e+00 |  6.000000e+00 | True          |                    | new snow density (same as rhominsna)                                                                                                                                            |
 | 0.023180 | rsminb        |  4.500000e+01 | 5.500000e+01 |  5.000000e+01 | True          |                    | bare soil minimum resistance                                                                                                                                                    |
 | 0.020512 | rsigormin     |  9.000000e+01 | 1.100000e+02 |  1.000000e+02 | True          |                    | SURFACE RUNOFF OROGRAPHY COEFF (MIN)                                                                                                                                            |
-| 0.020465 | gdry          |  1.440000e+06 | 1.760000e+06 |  1.600000e+06 | False         |                    |                                                                                                                                                                                 |
+| 0.020465 | gdry          |  1.440000e+06 | 1.760000e+06 |  1.600000e+06 | False         |                    | DRY SOIL HEAT CAPACITY ? (new sp. dist. parameter, used to be global)                                                                                                           |
 | 0.019742 | rlambdawat    |  5.130000e-01 | 6.270000e-01 |  5.700000e-01 | True          |                    | WATER HEAT CONDUCTIVITY                                                                                                                                                         |
 | 0.018577 | rsrdep        |  4.500000e-01 | 5.500000e-01 |  5.000000e-01 | True          |                    | SURFACE RUNOFF REPRESENTATIVE DEPTH                                                                                                                                             |
 | 0.016809 | rdsnmax       |  9.000000e-01 | 1.100000e+00 |  1.000000e+00 | True          |                    | MAXIMUM SNOW DEPTH (M) USED IN THE THERMAL                                                                                                                                      |
