format the text

--- a/params.org
+++ b/params.org
@@ -30,31 +30,31 @@
 | 0.495445 | wcons         |  2.630000e-07 | 6.940000e-06 |  2.630000e-07 | False         |                    | hydraulic conductivity at saturation                                                                                                                                            |
 | 0.334823 | rsnrttemp     |  2.456640e+02 | 3.002560e+02 |  2.729600e+02 | True          |                    | Used for setting up the look up table                                                                                                                                           |
 | 0.216603 | vgalpha       |  8.300000e-01 | 3.830000e+00 |  8.300000e-01 | False         |                    | \alpha in vG                                                                                                                                                                    |
-| 0.213012 | rtf1          |  2.721000e+02 | 2.760000e+02 |  2.741600e+02 | True          |                    | UPPER TEMPERATURE FOR SOIL WATER FREEZING                                                                                                                                       |
-| 0.207276 | lambdam       | -2.342100e+00 | 2.500000e+00 | -2.342100e+00 | False         |                    | exponent in the calculating of MINIMUM/MAXIMUM DIFFUSIVITY of soil                                                                                                              |
-| 0.171599 | rtf2          |  2.680000e+02 | 2.720000e+02 |  2.701600e+02 | True          |                    | LOWER TEMPERATURE FOR SOIL WATER FREEZING                                                                                                                                       |
-| 0.154465 | ralfmaxsn     |  7.650000e-01 | 9.350000e-01 |  8.500000e-01 | True          |                    | MAXIMUM SNOW ALBEDO                                                                                                                                                             |
-| 0.114790 | ralamsn       |  1.692000e+00 | 2.068000e+00 |  1.880000e+00 | True          |                    | EXPONENT IN SNOW HEAT CONDUCTIVITY                                                                                                                                              |
-| 0.087800 | ralfminsn     |  4.500000e-01 | 5.500000e-01 |  5.000000e-01 | True          |                    | MINIMUM SNOW ALBEDO                                                                                                                                                             |
-| 0.078248 | rtauf         |  2.160000e-01 | 2.640000e-01 |  2.400000e-01 | True          |                    | RELAXATION C FOR SNOW ALBEDO AND DENSITY (1/DAY)                                                                                                                                |
-| 0.068627 | rkerst3       |  9.000000e-01 | 1.100000e+00 |  1.000000e+00 | True          |                    | CONSTANT FOR DEFINING SOIL HEAT CONDUCTIVITY                                                                                                                                    |
-| 0.054356 | rsndtdestroi  |  1.350000e+02 | 1.650000e+02 |  1.500000e+02 | True          |                    | snow param: used in "! COMPACTATION DUE TO DESTRUCTIVE METAMORPHISM:  ZRSNDTDEST=RSNDTDESTA*EXP(-RSNDTDESTB*(ZT0-PTSN(JL))-ZRSNDTDESTC*MAX(0.0_JPRB,PRSNM1M(JL)-RSNDTDESTROI))" |
-| 0.044422 | rsndtoverc    |  1.620000e-02 | 1.980000e-02 |  1.800000e-02 | True          |                    | snow param: COMPACTATION DUE TO overburden (power law)                                                                                                                          |
+| 0.213012 | rtf1          |  2.721000e+02 | 2.760000e+02 |  2.741600e+02 | True          |                    | Upper temperature for soil water freezing                                                                                                                                       |
+| 0.207276 | lambdam       | -2.342100e+00 | 2.500000e+00 | -2.342100e+00 | False         |                    | Exponent in the calculating of minimum/maximum diffusivity of soil                                                                                                              |
+| 0.171599 | rtf2          |  2.680000e+02 | 2.720000e+02 |  2.701600e+02 | True          |                    | LOwer temperature for soil water freezing                                                                                                                                       |
+| 0.154465 | ralfmaxsn     |  7.650000e-01 | 9.350000e-01 |  8.500000e-01 | True          |                    | Maximum snow albedo                                                                                                                                                             |
+| 0.114790 | ralamsn       |  1.692000e+00 | 2.068000e+00 |  1.880000e+00 | True          |                    | Exponent in snow heat conductivity                                                                                                                                              |
+| 0.087800 | ralfminsn     |  4.500000e-01 | 5.500000e-01 |  5.000000e-01 | True          |                    | Minimum snow albedo                                                                                                                                                             |
+| 0.078248 | rtauf         |  2.160000e-01 | 2.640000e-01 |  2.400000e-01 | True          |                    | Relaxation c for snow albedo and density (1/day)                                                                                                                                |
+| 0.068627 | rkerst3       |  9.000000e-01 | 1.100000e+00 |  1.000000e+00 | True          |                    | Constant for defining soil heat conductivity                                                                                                                                    |
+| 0.054356 | rsndtdestroi  |  1.350000e+02 | 1.650000e+02 |  1.500000e+02 | True          |                    | snow param: used in "! Compactation due to destructive metamorphism:  ZRSNDTDEST=RSNDTDESTA*EXP(-RSNDTDESTB*(ZT0-PTSN(JL))-ZRSNDTDESTC*MAX(0.0_JPRB,PRSNM1M(JL)-RSNDTDESTROI))" |
+| 0.044422 | rsndtoverc    |  1.620000e-02 | 1.980000e-02 |  1.800000e-02 | True          |                    | snow param: Compactation due to overburden (power law)                                                                                                                          |
 | 0.041144 | rhominsna     |  9.810000e+01 | 1.199000e+02 |  1.090000e+02 | True          |                    | snow param: !New snow density: ZRHOFRESH = RHOMINSNA + RHOMINSNB*(PTSRF(JL)-RTT) + RHOMINSNC*(PUSRF(JL)**2+PVSRF(JL)**2)**0.25_JPRB                                             |
-| 0.036834 | rsndtoverb    |  7.290000e-02 | 8.910000e-02 |  8.100000e-02 | True          |                    | snow param: COMPACTATION DUE TO overburden (power law)                                                                                                                          |
+| 0.036834 | rsndtoverb    |  7.290000e-02 | 8.910000e-02 |  8.100000e-02 | True          |                    | snow param: Compactation due to overburden (power law)                                                                                                                          |
 | 0.031102 | rwrst         |  1.000000e-02 | 2.500000e-02 |  1.000000e-02 | False         |                    | \Theta_r in vG                                                                                                                                                                  |
 | 0.030752 | rsnsnow       |  6.300000e+00 | 7.700000e+00 |  7.000000e+00 | True          |                    | PLAMSK(KIDIA:KFDIA,JT) = RSNSNOW where plamsk is tiled skin layer conductivity                                                                                                  |
-| 0.024504 | rsndtovera    |  3.330000e+07 | 4.070000e+07 |  3.700000e+07 | True          |                    | snow param: COMPACTATION DUE TO overburden (power law)  ZRSNDTOVER=0.5*PSSNM1M(JL)*RG/(RSNDTOVERA*EXP(RSNDTOVERB*(ZT0-PTSN(JL))+RSNDTOVERC*PRSNM1M(JL)))                        |
-| 0.023274 | rhominsnb     |  5.400000e+00 | 6.600000e+00 |  6.000000e+00 | True          |                    | new snow density (same as rhominsna)                                                                                                                                            |
-| 0.023180 | rsminb        |  4.500000e+01 | 5.500000e+01 |  5.000000e+01 | True          |                    | bare soil minimum resistance                                                                                                                                                    |
-| 0.020512 | rsigormin     |  9.000000e+01 | 1.100000e+02 |  1.000000e+02 | True          |                    | SURFACE RUNOFF OROGRAPHY COEFF (MIN)                                                                                                                                            |
-| 0.020465 | gdry          |  1.440000e+06 | 1.760000e+06 |  1.600000e+06 | False         |                    | DRY SOIL HEAT CAPACITY ? (new sp. dist. parameter, used to be global)                                                                                                           |
-| 0.019742 | rlambdawat    |  5.130000e-01 | 6.270000e-01 |  5.700000e-01 | True          |                    | WATER HEAT CONDUCTIVITY                                                                                                                                                         |
-| 0.018577 | rsrdep        |  4.500000e-01 | 5.500000e-01 |  5.000000e-01 | True          |                    | SURFACE RUNOFF REPRESENTATIVE DEPTH                                                                                                                                             |
-| 0.016809 | rdsnmax       |  9.000000e-01 | 1.100000e+00 |  1.000000e+00 | True          |                    | MAXIMUM SNOW DEPTH (M) USED IN THE THERMAL                                                                                                                                      |
-| 0.015919 | rlwcswec      |  9.000000e-02 | 1.100000e-01 |  1.000000e-01 | True          |                    | used in snow liquid water capacity                                                                                                                                              |
-| 0.015756 | rqexp         |  3.600000e-01 | 4.400000e-01 |  4.000000e-01 | True          |                    | exponent in Lambda calculation                                                                                                                                                  |
-| 0.014811 | rsnlargesn    |  4.500000e+01 | 5.500000e+01 |  5.000000e+01 | True          |                    | large number to constrain Tsk variations in case of melting snow                                                                                                                |
+| 0.024504 | rsndtovera    |  3.330000e+07 | 4.070000e+07 |  3.700000e+07 | True          |                    | Snow param: COMPACTATION DUE TO overburden (power law)  ZRSNDTOVER=0.5*PSSNM1M(JL)*RG/(RSNDTOVERA*EXP(RSNDTOVERB*(ZT0-PTSN(JL))+RSNDTOVERC*PRSNM1M(JL)))                        |
+| 0.023274 | rhominsnb     |  5.400000e+00 | 6.600000e+00 |  6.000000e+00 | True          |                    | New snow density (same as rhominsna)                                                                                                                                            |
+| 0.023180 | rsminb        |  4.500000e+01 | 5.500000e+01 |  5.000000e+01 | True          |                    | Bare soil minimum resistance                                                                                                                                                    |
+| 0.020512 | rsigormin     |  9.000000e+01 | 1.100000e+02 |  1.000000e+02 | True          |                    | Surface runoff orography coeff (min)                                                                                                                                            |
+| 0.020465 | gdry          |  1.440000e+06 | 1.760000e+06 |  1.600000e+06 | False         |                    | Dry soil heat capacity ? (new sp. dist. parameter, used to be global)                                                                                                           |
+| 0.019742 | rlambdawat    |  5.130000e-01 | 6.270000e-01 |  5.700000e-01 | True          |                    | Water heat conductivity                                                                                                                                                         |
+| 0.018577 | rsrdep        |  4.500000e-01 | 5.500000e-01 |  5.000000e-01 | True          |                    | Surface runoff representative depth                                                                                                                                             |
+| 0.016809 | rdsnmax       |  9.000000e-01 | 1.100000e+00 |  1.000000e+00 | True          |                    | Maximum snow depth (m) used in the thermal                                                                                                                                      |
+| 0.015919 | rlwcswec      |  9.000000e-02 | 1.100000e-01 |  1.000000e-01 | True          |                    | Used in snow liquid water capacity                                                                                                                                              |
+| 0.015756 | rqexp         |  3.600000e-01 | 4.400000e-01 |  4.000000e-01 | True          |                    | Exponent in Lambda calculation                                                                                                                                                  |
+| 0.014811 | rsnlargesn    |  4.500000e+01 | 5.500000e+01 |  5.000000e+01 | True          |                    | Large number to constrain Tsk variations in case of melting snow                                                                                                                |
 |          |               |               |              |               |               |                    |                                                                                                                                                                                 |
 
 
