--- a/params.org
+++ b/params.org
@@ -1,34 +1,34 @@
 
 |  eee_val | parameter     |           min |          max |       default | flag_optimize | flag_mpr_parameter | desc                                                                                                                                                                            |
-|          | zach_thetar_1 |          0.00 |          1.0 |          0.50 | True          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_1 |          0.00 |          1.0 |          0.50 | True          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_2 |         -0.01 |         0.01 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_3 |         -0.50 |          0.5 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_4 |          0.00 |          1.0 |          0.50 | True          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_5 |         -0.01 |         0.01 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_6 |         -0.50 |          0.5 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vga_1    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vga_2    |         -0.10 |         0.10 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vga_3    |         -0.50 |         0.50 |           0.0 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vga_4    |         -0.10 |         0.10 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vga_5    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vga_6    |         -0.10 |         0.10 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vga_7    |         -0.50 |         0.50 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vga_8    |         -0.10 |         0.10 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_1    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_2    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_3    |         -5.00 |         5.00 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_4    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_5    |         -5.00 |         5.00 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_6    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_7    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_8    |         -5.00 |         5.00 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_9    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_10   |         -5.00 |         5.00 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_thetar_1 |          0.00 |          1.0 |          0.50 | False          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_1 |          0.00 |          1.0 |          0.50 | False          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_2 |         -0.01 |         0.01 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_3 |         -0.50 |          0.5 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_4 |          0.00 |          1.0 |          0.50 | False          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_5 |         -0.01 |         0.01 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_6 |         -0.50 |          0.5 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vga_1    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vga_2    |         -0.10 |         0.10 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vga_3    |         -0.50 |         0.50 |           0.0 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vga_4    |         -0.10 |         0.10 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vga_5    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vga_6    |         -0.10 |         0.10 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vga_7    |         -0.50 |         0.50 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vga_8    |         -0.10 |         0.10 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_1    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_2    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_3    |         -5.00 |         5.00 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_4    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_5    |         -5.00 |         5.00 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_6    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_7    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_8    |         -5.00 |         5.00 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_9    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_10   |         -5.00 |         5.00 |          0.00 | False          |                    |                                                                                                                                                                                 |
 | 0.768556 | nfac          |  1.101200e+00 | 1.377400e+00 |  1.101200e+00 | False         |                    | n in vG                                                                                                                                                                         |
 | 0.717580 | wsatm         |  4.030000e-01 | 7.660000e-01 |  4.030000e-01 | False         |                    | \Theta_s in vG                                                                                                                                                                  |
 | 0.495445 | wcons         |  2.630000e-07 | 6.940000e-06 |  2.630000e-07 | False         |                    | hydraulic conductivity at saturation                                                                                                                                            |
-| 0.334823 | rsnrttemp     |  2.456640e+02 | 3.002560e+02 |  2.729600e+02 | True          |                    | Used for setting up the look up table                                                                                                                                           |
+| 0.334823 | rsnrttemp     |  2.709600e+02 | 2.749600e+02 |  2.729600e+02 | True          |                    | Used for setting up the look up table                                                                                                                                           |
 | 0.216603 | vgalpha       |  8.300000e-01 | 3.830000e+00 |  8.300000e-01 | False         |                    | \alpha in vG                                                                                                                                                                    |
 | 0.213012 | rtf1          |  2.721000e+02 | 2.760000e+02 |  2.741600e+02 | True          |                    | Upper temperature for soil water freezing                                                                                                                                       |
 | 0.207276 | lambdam       | -2.342100e+00 | 2.500000e+00 | -2.342100e+00 | False         |                    | Exponent in the calculating of minimum/maximum diffusivity of soil                                                                                                              |
